--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ At SelfPub Studio, we don't just offer services; we empower authors. Join our co
 
 #SelfPublishing #AuthorServices #BookMarketing #DIYPublishing #SelfPubStudio
 baseurl: ""
-url: "https://selfpubstudio.github.io"
+url: "https://selfpubstudio.us"
 twitter_username: selfpubstudio
 github_username: selfpubstudio
 
