--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@
 
 title: SelfPub Studio
 email: your-email@example.com
-description: Welcome to SelfPub Studio, your premier destination for comprehensive self-publishing solutions! Whether you're an aspiring author seeking professional assistance or a DIY enthusiast eager to navigate the publishing world, we've got you covered. Explore our range of services, including ghostwriting for non-fiction gems, meticulous editing, print and ebook formatting, audiobook creation, platform selection guidance, and robust marketing support. Dive into our wealth of articles, blogs, guides, courses, and tutorials, meticulously crafted to demystify the intricacies of book publishing.
+description: >-
+Welcome to SelfPub Studio, your premier destination for comprehensive self-publishing solutions! Whether you're an aspiring author seeking professional assistance or a DIY enthusiast eager to navigate the publishing world, we've got you covered. Explore our range of services, including ghostwriting for non-fiction gems, meticulous editing, print and ebook formatting, audiobook creation, platform selection guidance, and robust marketing support. Dive into our wealth of articles, blogs, guides, courses, and tutorials, meticulously crafted to demystify the intricacies of book publishing.
 
 |-
 At SelfPub Studio, we don't just offer services; we empower authors. Join our community and embark on a journey where words come to life. Your success is our mission, and with every click, you're one step closer to realizing your literary dreams. Start your publishing adventure with us today!
